# zinga

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  bump.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  wterm-css.d.ts
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/composables/: pages.ts  sidebar.ts  useAppBackground.ts  useBottomBar.ts  useDevices.ts  useFeedSync.ts  useImageFullscreen.ts  useLocalDb.ts  useLocalLibrary.ts  useLyrics.ts  useLyricsFontSize.ts  useLyricsPanelMode.ts  useMopidy.ts  useMopidyPolling.ts  useOpenExternalLink.ts  usePlayer.ts  usePolling.ts  useProvider.ts  useProviderArtwork.ts  useProviderNavigation.ts  useQueueProgress.ts  useRemoteClient.ts  useRemoteServer.ts  useRequestQueue.ts  useSettings.ts  useSettingsSections.ts  useSystemSetup.ts  useTerminalPanel.ts  useTidalArtwork.ts  useTidalAuth.ts  useTidalNavigation.ts  useUpnpPlayer.ts
docs/: getting-started.md  index.md  package.json  uno.config.ts
scripts/: README.md  fix_icecast_admin.sh  generate-assets.mjs  logs.sh  manage_upnp_devices.sh  restart.sh  setup.sh  show_icecast_creds.sh  start.sh  stop.sh  uninstall.sh  verify.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/remote-client/: app.js  index.html  style.css
src-tauri/src/: lib.rs  library.rs  main.rs  upnp.rs
src-tauri/src/remote/: api.rs  auth.rs  discovery.rs  mod.rs  mopidy.rs  state.rs  ws.rs
src-tauri/src/setup/: mod.rs
(+96 files in other folders)
