[package]
name = "zinga"
version = "0.0.1"
description = "Music app for UPnP devices, built with Nuxt 4 and Tauri 2"
authors = [ "Enzo Notario" ]
license = "MIT"
repository = "https://github.com/enzonotario/zinga"
edition = "2021"

[lib]
name = "zinga_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.5"
features = [ ]

[dependencies]
serde_json = "1"
ureq = "3.1.1"
quick-xml = "0.38.3"
url = "2.5.7"
urlencoding = "2.1.3"
rand = "0.8"
hostname = "0.4"
futures-util = "0.3"
gstreamer = { version = "0.23.4", package = "gstreamer" }
lofty = "0.22.0"
walkdir = "2.5.0"
base64 = "0.22.1"
if-addrs = "0.14"

[dependencies.axum]
version = "0.8"
features = [ "ws" ]

[dependencies.tower-http]
version = "0.6"
features = [
  "cors",
  "fs"
]

[dependencies.uuid]
version = "1"
features = [ "v4" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.tauri]
version = "2.9"
features = [
  "protocol-asset",
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.tauri-plugin-shell]
version = "2"

[dependencies.tauri-plugin-opener]
version = "2"

[dependencies.tauri-plugin-dialog]
version = "2"

[dependencies.tauri-plugin-sql]
version = "2"
features = [ "sqlite" ]
